# RAGAP-PHI

./: .gitignore  README.md  infer_phage_host.py  pipeline.py  pyproject.toml  setup.sh
assets/checkpoints/: README.md
assets/databases/: README.md
assets/models/: README.md
configs/: pipeline.fullhost_v2.yaml
data/metadata/: taxid_species.tsv
data/taxonomy/: taxonomy_with_alias.parquet
docs/: assets.md  inference.md
envs/: PHPGAT.yaml  RAGAP.yaml  README.md  dnaberts.yaml  esm.yaml  pharokka.yaml  sourmash.yaml
inputs/: README.md  virus_host_with_GCF.tsv
inputs/edges/: host_host_edges.tsv  host_taxonomy_edges.tsv  phage_host_edges.tsv  phage_phage_edges.tsv  protein_protein_edges.tsv  taxonomy_taxonomy_edges.tsv
ragap_pipeline/: config.py  execution.py  inference.py  manifest.py  model.py  pipeline.py  slurm.py  utils.py  validators.py
ragap_pipeline/stages/: __init__.py  cluster.py  dna.py  graph.py  pairs.py  proteins.py  train.py
scripts/: build_hetero_graph_with_splits.py  build_pairs_and_splits.py  dna_bert_embed.py  generate_esm_embeddings.py  generate_esm_embeddings_phage.py  package_inference_bundle.py  setup_models.py  train_hgt_phage_host_weight_RBP_noleak_hard.py
tests/: test_inference.py  test_inference_bundle.py
