[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragap-phi"
version = "0.1.0"
description = "RAGAP phage-host training and inference pipeline"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ragap_pipeline*"]
